--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- banner-info -->
 				<div class="banner-info text-center">
 					<img src="images/pic.png" class="img-responsive" alt=""/>
-					<h1>Videntur Parum</h1>
+					<h1>NAVINA</h1>
 					<p>Love to Design and capture Photographs :)</p>
 					<ul>
 						<li><a href="#">Hire Me</a></li>
